** Add support for selection, copy, cut, and paste operations in 'TextInput'
*** Add 'TextInput.blurAction'
*** Add 'TextInputCanvas' class and call 'tk.getClipboard'
* Change 'MessageBox' text input to 'TextInputCanvas'
*** Add 'Slider.methodNames'
** Drag slider knob from any point rather than only the center
** Default knob size based on number of steps
*** Add 'Canvas.call', 'Canvas.flatten', 'Canvas.scroll' and 'Canvas.scrollTo' methods, SCROLL event
*** Standardize attributes (target, focus, hover, handler) for sc8pr events
*** Add 'scrollable' property and 'iconofy'/'deiconify' methods to 'Graphic' class
*** Add 'sc8pr.gui.scroll' and 'sc8pr.gui.tk' modules
*** Add 'sc8pr.robot.gui' module
*** Add 'LATEX_URL', 'LATEX_FMT', 'latex_url' to 'sc8pr.misc.webcache'
*** 'WebCache' does not overwrite existing cache file if URL is different
** Fix blit location bug in 'Canvas.snapshot'
* Sync video capture when sketch does not run at nominal frame rate
* Add 'util.modKeys'
* Add 'invert' parameter to 'misc.plot.coordTr'
* Allow assignment to canvas by layer: cv[layer] = gr
** Fix minor bug with 'Sketch.caption' getter
*** Add 'Ellipse' and 'Arc' classes to 'sc8pr.shape'
* Add 'sprite.onreset' event, called by 'sprite.ondraw'
*** Add 'Video' methods 'splice', 'info', '__add__', 'effect', 'effectInPlace', 'play'
*** 'Video.clip' accepts negative 'start' and 'end' arguments
* 'CostumeImage.costumeTime' may be negative for reverse playback
*** 'Plot' constructor can take an object with 'size' attribute in place of a size literal
*** 'Plot.clockwise' and 'Plot.units' properties
*** Add 'geom.smallAngle' and 'geom.shiftAlongNormal'
*** Add 'Graphic.scale'
*** Fix bug in 'Canvas.__init__'
*** Add 'sc8pr.plot' package
*** Add additional 'Graphic' and 'Canvas' methods to support new plotting/scrolling package
*** Add 'Canvas.clipArea', 'Canvas.resizeContent', 'Canvas.icons, 'Canvas.iconSize'
*** Allow 'Canvas.__isub__' to accept a string; add 'Canvas.removeItems'